# ruv-neural

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
apps/ruv-neural-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/ruv-neural-ui/src/: App.tsx  styles.css
apps/ruv-neural-ui/src/components/: PlaybackControls.tsx  charts.tsx  common.tsx
apps/ruv-neural-ui/src/fixtures/: focused.json  gamma.json  index.ts  relaxed-safestop.json  relaxed.json
apps/ruv-neural-ui/src/realmode/: audit.ts  link.test.ts  link.ts
apps/ruv-neural-ui/src/schemas/: evidence.ts
apps/ruv-neural-ui/src/screens/: index.tsx  realmode.tsx  research.tsx
apps/ruv-neural-ui/src/store/: realStore.ts  researchStore.test.ts  researchStore.ts  store.ts
apps/ruv-neural-ui/src/util/: constants.ts  content-lint.test.ts  format.ts
apps/ruv-neural-ui/src/verifier/: parity.test.ts  verify.test.ts  verify.ts
apps/ruv-neural-ui/tests/: demo.spec.ts
docs/: closed-loop-loop-log.md
docs/adr/: 0000-template.md  0001-scope.md  0002-sensory-modalities.md  0003-closed-loop-architecture.md  0004-stimulus-verification.md  0005-response-sensing.md  0006-personal-state-embedding.md  0007-safety-envelope.md  0008-protocol-dosing.md  0009-audit-trail.md  0010-sensory-safety-limits.md  0011-acceptance-test.md  0012-feedback-smoothing.md  0014-web-console.md  0015-neural-foundation-models.md  0016-invasive-bci-boundary.md  0017-opm-meg-frontend.md  0018-nv-diamond-roadmap.md  0019-genus-evidence-base.md  0020-therapeutic-neuromod-out-of-scope.md  0021-privacy-preserving-personalization.md  0022-neural-data-governance.md  0023-ruvector-backend.md
docs/benchmarks/: decoder-public-eeg.md  eeg-eye-state.md
docs/research/: brain2qwerty-integration.md
ruv-neural-biosense/: Cargo.toml
ruv-neural-biosense/src/: hrv.rs  lib.rs  motion.rs  physio.rs  respiration.rs  simulator.rs  sleep.rs
ruv-neural-brain2text/: Cargo.toml  MODEL_CARD.md  README.md  WEIGHTS_LICENSE
ruv-neural-brain2text/benches/: decode.rs
ruv-neural-brain2text/examples/: benchmark.rs  demo.rs  train.rs
ruv-neural-brain2text/src/: config.rs  epoch.rs  events.rs  evolve.rs  harness.rs  lib.rs  metrics.rs  preprocess.rs
ruv-neural-brain2text/src/dataset/: brainvision.rs  mod.rs  synthetic.rs
ruv-neural-brain2text/src/decode/: mod.rs  ngram.rs  prototype.rs
ruv-neural-brain2text/src/model/: linear.rs  mlp.rs  mod.rs  prototype.rs
ruv-neural-cli/: Cargo.toml
ruv-neural-cli/src/: main.rs
ruv-neural-cli/src/commands/: analyze.rs  export.rs  mincut.rs  mod.rs  model.rs  neuromod.rs  pipeline.rs  simulate.rs  verify_bundle.rs  witness.rs
ruv-neural-core/: Cargo.toml
ruv-neural-core/src/: lib.rs  rvf.rs  rvf_container.rs  rvf_quant.rs  rvf_witness.rs  traits.rs  witness.rs
ruv-neural-core/tests/: rvf_fuzz.rs
ruv-neural-decoder/: Cargo.toml
ruv-neural-decoder/examples/: train_eeg_eye_state.rs  train_seizure.rs
ruv-neural-decoder/src/: clinical.rs  knn_decoder.rs  lib.rs  logistic.rs  pipeline.rs  rvf_model.rs  threshold_decoder.rs  transition_decoder.rs
ruv-neural-embed/src/: distance.rs  foundation.rs  lib.rs  node2vec.rs  rvf_export.rs  topology_embed.rs
ruv-neural-esp32/src/: adc.rs  aggregator.rs  power.rs  protocol.rs
ruv-neural-graph/src/: constructor.rs  dynamics.rs  metrics.rs  petgraph_bridge.rs  spectral.rs
ruv-neural-loop/: Cargo.toml
ruv-neural-loop/src/: audit.rs  controller.rs  embedding.rs  envelope.rs  evidence.rs  federated.rs  lib.rs  outcome.rs  protocol.rs  sim.rs  state.rs
ruv-neural-loop/tests/: closed_loop_acceptance.rs
ruv-neural-memory/benches/: benchmarks.rs
ruv-neural-memory/src/: hnsw.rs  lib.rs  longitudinal.rs  persistence.rs  rvf_index.rs  session.rs  store.rs
ruv-neural-mincut/src/: benchmark.rs  coherence.rs  dynamic.rs  multiway.rs  normalized.rs  spectral_cut.rs  stoer_wagner.rs
ruv-neural-sensor/src/: eeg.rs  lib.rs  opm.rs  simulator.rs
ruv-neural-signal/src/: artifact.rs  connectivity.rs  filter.rs  hilbert.rs  preprocessing.rs  spectral.rs
ruv-neural-stim/: Cargo.toml
ruv-neural-stim/src/: generator.rs  lib.rs  params.rs  receipt.rs  safety.rs  waveform.rs
ruv-neural-viz/: Cargo.toml
ruv-neural-viz/src/: animation.rs  ascii.rs  bids.rs  colormap.rs  lib.rs
ruv-neural-wasm/: Cargo.toml
ruv-neural-wasm/src/: graph_wasm.rs  lib.rs  rvf_wasm.rs  streaming.rs
