[package]
name = "ruv-neural-loop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Ruflo — closed-loop sensory neuromodulation controller for rUv Neural: personal state embedding, safety envelope, conservative dosing, and a tamper-evident audit trail. Detect a target state, deliver a verified stimulus, measure the response, stop safely outside the envelope."
keywords = ["closed-loop", "neuromodulation", "controller", "safety", "audit"]
categories = ["science", "algorithms"]

[dependencies]
ruv-neural-core.workspace = true
ruv-neural-stim.workspace = true
ruv-neural-biosense.workspace = true
ruv-neural-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
