[package]
name = "ruv-neural-stim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Multi-modal sensory neuromodulation stimulus synthesis (40 Hz light/audio/haptic) with sensory-safety limits and cryptographic delivery receipts for the rUv Neural closed-loop platform."
keywords = ["neuromodulation", "gamma", "entrainment", "stimulus", "neurofeedback"]
categories = ["science", "algorithms"]

[dependencies]
ruv-neural-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
