[package]
name = "ruv-neural-viz"
description = "rUv Neural — Brain topology visualization data structures and ASCII rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
# `std` pulls the graph-bound modules (animation/ascii/export/layout) and their
# deps. Without it the crate is `no_std` and exposes only `colormap` (ESP32).
std = [
    "dep:ruv-neural-core",
    "dep:ruv-neural-graph",
    "dep:ruv-neural-mincut",
    "dep:serde",
    "dep:serde_json",
    "dep:tracing",
]
ascii = []  # ASCII art rendering for terminal

[dependencies]
# All optional + gated behind `std`: the `no_std` colormap needs none of them.
ruv-neural-core = { workspace = true, optional = true }
ruv-neural-graph = { workspace = true, optional = true }
ruv-neural-mincut = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
